--- a/hw1.html
+++ b/hw1.html
@@ -509,7 +509,7 @@ occurs between the variables.”</p>
 ## x dplyr::lag()      masks stats::lag()
 ## x yardstick::spec() masks readr::spec()
 ## x recipes::step()   masks stats::step()
-## • Dig deeper into tidy modeling with R at https://www.tmwr.org</code></pre>
+## • Search for functions across packages at https://www.tidymodels.org/find/</code></pre>
 <pre class="r"><code>library(ISLR)</code></pre>
 <pre class="r"><code>mpg</code></pre>
 <pre><code>## # A tibble: 234 × 11
@@ -594,7 +594,9 @@ surprise you?</p>
 <p>The variables cyl and displ were positively correlated with each
 other, as well as the variables hwy and cty. On the other hand the
 relationships between cty and displ, cty and cyl, hwy and displ, and hwy
-and cyl were negatively correlated with one another.</p>
+and cyl were negatively correlated with one another. These relationships
+do make sense to me, as I believe that city and highway mpg should be
+positively related to one another.</p>
 </div>
 </div>
 
